vtenc: Use correct strides, etc from the GstVideoFrame

https://bugzilla.gnome.org/show_bug.cgi?id=706211